# MCR-Lab

./: .dockerignore  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  win.dev.Dockerfile
configs/: config.yaml
output/: sud_bev_data_stats.txt  sud_data_split.txt  whu_bev_data_stats.txt  whu_data_split.txt
src/: main.py  point_cloud_inspect.py  point_cloud_io.py
src/mcrlab/: __init__.py  __main__.py  log.py  main.py  metrices.py  model_utils.py  projection.py  test.py  train.py
src/mcrlab/classic/: least_squares.py  shape_fit.py  utils.py
src/mcrlab/config/: __init__.py  config.py
src/mcrlab/custom_hf/: unet.py
src/mcrlab/custom_nn/: data.py  loss.py  metrics.py  model.py  optimizer.py  plot.py  scheduler.py  utils.py
src/mcrlab/execution/: custom_train.py  eval_extraction.py  inference.py  test.py  train.py  tryout.py
src/mcrlab/geometry/: shape_fit.py  utils.py
src/mcrlab/image/: io.py  utils.py
src/mcrlab/models/: base.py  object_detection.py  segmentation.py
src/mcrlab/point_cloud/: core.py  data.py  inspect.py  io.py  las_utils.py  semantic_kitti_utils.py  shape_check.py  tensor_wrapper.py  utils.py
