[project]
name = "mcrlab"
version = "0.1.0"
description = "Point Cloud Manhole Center Regression Pipeline"
authors = [
  { name="Tobia Ippolito" }
]
readme = "README.md"
# requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "scipy",
    "open3d",
    "cloth-simulation-filter",
    "pyransac3d",
    "laspy",
    "pydantic",  # config
    "pyyaml",
    "transformers",
    "huggingface_hub",
    "torch",    # afterwards in install your torch version
    "torchvision", 
    "tensorboard",
    "numba",
    "python-dotenv",
    "scikit-learn",
    "scikit-image",
    "ultralytics",
    "h5py",
    # "pywhu3d",
    # "torch-geometric",
    # "pytorch3d",
    # "segmentation-models-pytorch-3d"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["."]

[project.scripts]
mcrlab = "mcrlab.main:main"


