[project]
name = "mcrlab"
version = "0.1.0"
description = "Point Cloud Manhole Center Regression Pipeline"
authors = [
  { name="Tobia Ippolito" }
]
readme = "README.md"
# requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
    "scipy",
    "open3d",
    "cloth-simulation-filter",
    "pyransac3d",
    "laspy",
    "pydantic",  # config
    "pyyaml",
    
    "transformers==4.41.0",
    "tokenizers==0.19.1",
    "accelerate==0.30.1",
    "datasets==2.19.0",
    "huggingface_hub",

    # "transformers",
    # "tokenizers",
    # "accelerate",
    # "datasets",
    # "huggingface_hub",
    
    # "torch==2.2.2",
    # "torchvision==0.17.2",

    "torch_geometric",
    "tensorboard",
    "numba",
    "python-dotenv",
    "scikit-learn",
    "scikit-image",
    "ultralytics",
    "h5py",
    "evaluate",
    "albumentations",
    "mlflow",
    "tensorboard",
    "shapely",

    # "monai",

    "segmentation_models_pytorch",

    # "pywhu3d",
    # "torch-geometric",
    # "pytorch3d",
    # "segmentation-models-pytorch-3d"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["."]

[project.scripts]
mcrlab = "mcrlab.main:main"


